# subscription-manager

./: .coveragerc  .deplist  .flake8  .git-blame-ignore-revs  .gitignore  .mailmap  .packit.yaml  .packit.yml  .sourcery.yaml  .tito  CMakeLists.txt  Containerfile  INSTALL.md  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  README  README.Fedora  README.containers.md  README.md  TESTING.md  Vagrantfile  ansible.cfg  de.po  dev-requirements.txt  es.po  newui.py  pylintrc  pyproject.toml  pytest.ini  python-rhsm.spec  random-order.py  requirements.txt  rpmlint.config  setup.cfg  setup.py  subscription-manager-rpmlintrc  subscription-manager.spec  test-requirements-2.6.txt  (+2 more)
python-rhsm/: .branches  .coveragerc  CMakeLists.txt  README  python-rhsm.spec  requirements.txt  setup.py  test-requirements.txt  tox.ini
python-rhsm/docs/sphinx/: conf.py  index.rst  modules.rst
python-rhsm/playpen/: noserc.dev
python-rhsm/rel-eng/: releasers.conf
python-rhsm/scripts/: .known.RHEL5.8
python-rhsm/src/: CMakeLists.txt
python-rhsm/src/rhsm/: bitstream.py  certificate.py  certificate2.py  config.py  connection.py  https.py  huffman.py  m2cryptohttp.py  m2cryptossl.py  ourjson.py  pathtree.py  profile.py  utils.py  version.py
python-rhsm/test/functional/: connection-tests.py  profile-tests.py
python-rhsm/test/unit/: bitstream-tests.py  certificate-tests.py  certificate2-tests.py  config-tests.py  connection-tests.py  huffman-tests.py  json-tests.py  oid-tests.py  pathtree-tests.py  util-tests.py
src/: CMakeLists.txt  Connection.py  ManagerCli.py  OptionsCli.py  __init__.py  async.py  certificate.c  certificate.h  certificate.py  certlib.py  certmgr.py  config.py  connection.py  constants.py  factlib.py  facts.py  firstboot.py  hardware.py  hwprobe.py  i18n_optparse.py  install-num-migrate-to-rhsm  lock.py  logutil.py  managercli.py  managergui.py  managerlib.py  managerlib_async.py  productid.py  repolib.py  rhn-migrate-classic-to-rhsm  rhsm_d.py  rhsm_icon.c  rhsmcertd-worker.py  rhsmcertd.c  rhsmcertd.init.d  rhsmcertd.py  subscription-manager  subscription-manager-cli  subscription-manager-gui  test_certificate.c
src/cloud_what/: README.md  README.md.orig  _base_provider.py  cloud-what.py  fact_collector.py  provider.py  setup.py
src/cloud_what/providers/: aws.py  aws.py.orig  azure.py  azure.py.orig  gcp.py  gcp.py.orig
src/compliance/: rhsm_compliance_d.py  rhsm_compliance_icon.c
src/consumer_debug/: cli.py  commands.py  debug_commands.py
src/content_plugins/: README.md  container_content.ContainerContentPlugin.conf  container_content.py  docker_content.py  insights_register.py  ostree_content.py  redhat-entitlement-authority.pem
src/content_plugins/ostree/: action_invoker.py  model.py  ostree_content.py  repo_file.py
src/daemons/: CMakeLists.txt  rhsm_d.py  rhsmcertd-worker.py  rhsmcertd.c
src/dbus/common/: constants.py  dbus_utils.py  decorators.py
src/dbus/services/: base_properties.py  base_server.py  base_service.py  com.redhat.Subscriptions1.Facts.policy  com.redhat.Subscriptions1.conf  com.redhat.Subscriptions1.policy  decorators.py
src/dbus/tools/: dbus-show  smoke_dbus.sh
src/dnf-plugins/: product-id.py  subscription-manager.py  upload-profile.py
src/dnf-plugins/product-id/: CMakeLists.txt  README.md  product-id.c  product-id.h  productdb.c  productdb.h  test-product-id.c  test-productdb.c  util.c  util.h
src/dnf-plugins/product_id/: CMakeLists.txt  Makefile  product_id.c
src/dnf-plugins/test_plugin/: Makefile  README.md  hello_dnf.c
src/facts/: __init__.py  admin_facts.py  cleanup.py  collection.py  collector.py  dmiinfo.py  firmware_info.py  host_collector.py  hwprobe.py  virt.py
src/gui/: activate.py  allsubs.py  async_uep.py  compliance.py  contract_selection.py  dateselect.py  factsgui.py  file_monitor.py  firstboot.py  importsub.py  installedtab.py  managergui.py  messageWindow.py  mysubstab.py  networkConfig.py  productstable.py  progress.py  storage.py  utils.py  widgets.py
src/gui/data/: activate.glade  allsubs.glade  compliance.glade  contract_selection.glade  dateselect.glade  factsdialog.glade  importsub.glade  installed.glade  mainwindow.glade  mysubs.glade  networkConfig.glade  progress.glade  registration.glade  regtoken.glade  rhsm.glade  standalone.glade  standaloneH.glade  (+2 more)
src/initial-setup/: firstboot_to_initial_setup.txt
src/intentctl/: cli.py  intentfiles.py  main.py  utils.py
src/plugin/: pidplugin.py  product-id.py  rhsmplugin.py  subscription-manager.py
src/plugins/: README.md  erase-product.py  product-id.py  search-disabled-repos.py  subscription-manager.py
src/rct/: cert_commands.py  cli.py  commands.py  manifest_commands.py  printing.py  version.py  version.py.in
src/repomanagement/: repolib.py  rhsmplugin.py
src/rhsm/: _certificate.pyi  bitstream.py  certificate.py  certificate2.py  config.py  connection.py  https.py  huffman.py  logutil.py  m2cryptohttp.py  m2cryptossl.py  ourjson.py  pathtree.py  profile.py  repofile.py  url_utils.py  utils.py  version.py
src/rhsm-plugins/: facts.py  product_install.py
src/rhsm_debug/: cli.py  commands.py  debug_commands.py
src/rhsm_icon/: CMakeLists.txt  rhsm_icon.c
src/rhsmlib/: __init__.py  client_info.py  file_monitor.py  utils.py
src/rt/: cli.py  commands.py
src/smurl/: cli.py  commands.py
src/subscription_manager/: __init__.py  action_client.py  api.py  async.py  async_utils.py  base_action_client.py  base_plugin.py  brandlib.py  cache.py  capabilities.py  cert_sorter.py  certdirectory.py  certlib.py  certmgr.py  classic_check.py  cli.py  constants.py  content_action_client.py  cp_provider.py  cpuinfo.py  dbus_interface.py  dmiinfo.py  entbranding.py  entcertlib.py  exceptions.py  factlib.py  facts.py  file_monitor.py  ga_loader.py  healinglib.py  hwprobe.py  i18n.py  i18n_argparse.py  i18n_optparse.py  identity.py  identitycertlib.py  injection.py  injection_init.py  injectioninit.py  installedproductslib.py  (+32 more)
src/syspurpose/: cli.py  files.py  main.py  utils.py
src/util/: __init__.py  certificate.py  uep.py
src/zypper-plugins/: zyppersm.py
(+1303 files in other folders)
